PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.0.2
- Added PHP_EOL constant that contains the OS way of representing newlines.
  (Paul Hudson, Derick)
- Fixed bug with raw_post_data not getting set (Brian)
- Fixed a file-descriptor leak with phpinfo() and other 'special' URLs (Zeev)
- Fixed bug #29821 (Fixed possible crashes in convert_uudecode() on invalid
  data). (Ilia)
- Fixed bug #29737 (ip2long should return -1 if IP is 255.255.255.255 and FALSE
  on error). (Tony)
- Fixed bug #29711 (Changed ext/xml to default to UTF-8 output). (Rob)
- Fixed bug #29678 (opendir() with ftp:// wrapper segfaults if path does not
  have trailing slash). (Ilia)
- Fixed bug #29657 (xml_* functions throw non descriptive error). 
  (Christian, Rob)
- Fixed bug #29656 (segfault on result and statement properties). (Georg)
- Fixed bug #29447 (Reflection API issues). (Marcus)
- Fixed bug #27791 (Apache 2.0 SAPI build against Apache 2 HEAD). (Joe Orton,
  Derick)
- Fixed bug #26737 (private/protected properties not serialized when user
  declared method __sleep() exists). E_NOTICE thrown when __sleep() returns
  name of non-existing member. (Andrey, Curt)

12 Aug 2004, PHP 5.0.1
- Changed destructor mechanism so that destructors are called prior to request
  shutdown. (Marcus)
- Rewritten UNIX and Windows install help files. (Documentation Team)
- Updated several libraries bundled with the windows release which now 
  includes libxml2-2.6.11, libxslt-1.1.7 and iconv-1.9.1. (Rob, Edin)
- Improved and moved ActiveScript SAPI to PECL.  (Wez)
- Fixed bug #29606 (php_strip_whitespace() prints to stdout rather then
  returning the value). (Ilia)
- Fixed bug #29577 (MYSQLI_CLIENT_FOUND_ROWS undefined) (Georg)
- Fixed bug #29573 (Segmentation fault, when exception thrown within
  PHP function called from XSLT). (Christian)